k8s/boundaries/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
    name: knative-serving
---
apiVersion: v1
kind: Namespace
metadata:
    name: kourier-system
---
apiVersion: v1
kind: Namespace
metadata:
    name: longlink-system
---
apiVersion: v1
kind: Namespace
metadata:
    name: rook-ceph
---
apiVersion: v1
kind: Namespace
metadata:
    name: cnpg-system
